Refactor AiNlpService to use Collections.singletonList for single ChatMessage and improve jsonResponse validation